...
        Button(
            onClick = { /* Navigate to next screen */ },
            modifier = Modifier.align(Alignment.BottomCenter),
            colors = ButtonDefaults.buttonColors(containerColor = BrandDarkPurple)
        ) {
            Text(
                text = "Get Started",
                style = MaterialTheme.typography.headlineSmall,
                modifier = Modifier.fillMaxWidth(),
                textAlign = TextAlign.Center
            )
        }
    }
...
