...
    val context = LocalContext.current
    GPAiTheme {
        Column(
            modifier = Modifier
                .fillMaxSize() // Fill the entire screen.
                .padding(16.dp)
                .testTag("upload_screen"),
            verticalArrangement = Arrangement.Center, // Center content vertically.
            horizontalAlignment = Alignment.CenterHorizontally // Center content horizontally.
        ) {
            Column(
                modifier = Modifier.weight(1f), // Weighting the column to fill remaining space.
                verticalArrangement = Arrangement.Center,
...
